# sre-tools

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: semgrep.yml  test.yml
sre_tools/: _analyse.py  _simplify.py  _split.py  analyse.py  simplify.py  utils.py
tests/: test_analyse.py  test_simplify.py  test_split.py  test_utils.py
