[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-tools"
authors = [{email = "jayvdb@gmail.com"}]
license = {text = "Apache-2.0"}
description = "Tools for manupulating sre_parse data structures"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Development Status :: 4 - Beta",
]
urls = {Homepage = "https://github.com/jayvdb/sre-tools"}
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
dynamic = ["version"]

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*",]
namespaces = false

[tool.setuptools_scm]
