[bdist_wheel]
universal = 1

[options]
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
tests_require =

[metadata]
name = sre-tools
author_email = jayvdb@gmail.com
license = Apache-2.0
description = Tools for manupulating sre_parse data structures
url = https://github.com/jayvdb/sre-tools
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Security
    Development Status :: 4 - Beta

[options.packages.find]
exclude =
    tests
    tests.*
